--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -1,39 +1,50 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        app:theme="@style/Theme.EspressoTestThemeAppBarDarkOverflow" />
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/Theme.EspressoTestThemeAppBarDarkOverflow"/>
+
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/my_drawer_layout"
-        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar">
+
         <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <FrameLayout
-                xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
-                android:layout_width="match_parent" android:layout_height="fill_parent"
-                tools:context=".MainActivity" tools:ignore="MergeRootFrame" />
+                android:id="@+id/container"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                tools:context=".MainActivity"
+                tools:ignore="MergeRootFrame"/>
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:layout_gravity="left|start">
+            android:layout_gravity="left|start"
+            android:background="@color/white">
+
             <ListView
                 android:id="@+id/navigation_menu"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"/>
         </LinearLayout>
+
     </android.support.v4.widget.DrawerLayout>
+
 </RelativeLayout>
