--- a/app/src/main/res/layout/fragment_position.xml
+++ b/app/src/main/res/layout/fragment_position.xml
@@ -1,33 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     android:id="@+id/parent_container"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/top_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:text="@string/top_text" />
+        android:layout_alignParentTop="true"
+        android:text="@string/top_text"/>
+
     <TextView
         android:id="@+id/left_text"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/top_text"
-        android:text="@string/left_text" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/left_text"/>
+
     <TextView
         android:id="@+id/right_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/right_text"
         android:layout_below="@id/top_text"
-        android:layout_toRightOf="@id/left_text"   />
+        android:layout_toRightOf="@id/left_text"
+        android:text="@string/right_text"/>
+
     <TextView
         android:id="@+id/bottom_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:text="@string/bottom_text" />
+        android:text="@string/bottom_text"/>
+
 </RelativeLayout>
