For purposes of consistency all id renamed to not have capital letters

--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -11,7 +11,7 @@
     tools:context=".MainActivity$NavigationFragment">
 
     <TextView
-        android:id="@+id/exampleFragmentText"
+        android:id="@+id/navigation_fragment_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
