--- a/app/src/main/res/layout/fragment_hierarchy.xml
+++ b/app/src/main/res/layout/fragment_hierarchy.xml
@@ -9,17 +9,17 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/hierachy_text"
+            android:id="@+id/hierarchy_text_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/hierarchy_text"
             android:text="@string/hierarchy_text"/>
 
         <TextView
-            android:id="@+id/hierachy_text_two"
+            android:id="@+id/hierarchy_text_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/hierachy_text"
+            android:layout_below="@id/hierarchy_text_one"
             android:text="@string/hierarchy_text"/>
 
     </RelativeLayout>
