--- a/app/src/main/res/layout/fragment_switch.xml
+++ b/app/src/main/res/layout/fragment_switch.xml
@@ -11,10 +11,10 @@
     tools:context=".MainActivity$NavigationFragment">
 
     <Switch
-        android:id="@+id/exampleSwitch"
+        android:id="@+id/example_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/exampleEditText"
+        android:layout_below="@+id/test_fragment_edittext"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="57dp"
         android:checked="false"
