--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/exampleText"
+                android:id="@+id/test_fragment_example_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -29,25 +29,25 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
 
             <Button
-                android:id="@+id/exampleButton"
+                android:id="@+id/change_text_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/exampleText"
+                android:layout_below="@id/test_fragment_example_text"
                 android:layout_centerHorizontal="true"
                 android:text="@string/example_text_button"/>
 
             <EditText
-                android:id="@+id/exampleEditText"
+                android:id="@+id/test_fragment_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/exampleButton"
+                android:layout_below="@id/change_text_button"
                 android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
             <TextView
-                android:id="@+id/contentDescriptionText"
+                android:id="@+id/test_fragment_content_description_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/exampleEditText"
+                android:layout_below="@+id/test_fragment_edittext"
                 android:layout_centerHorizontal="true"
                 android:contentDescription="@string/example_content_description"
                 android:text="@string/example_content_description"
@@ -57,7 +57,7 @@
                 android:id="@+id/offscreen_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/contentDescriptionText"
+                android:layout_below="@id/test_fragment_content_description_text"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="700dp"
                 android:text="@string/offscreen_button"/>
@@ -66,7 +66,7 @@
                 android:id="@+id/enabled_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/contentDescriptionText"
+                android:layout_below="@+id/test_fragment_content_description_text"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="64dp"
                 android:text="@string/checkbox_string"/>
