--- a/app/src/main/res/layout/activity_custom_intent.xml
+++ b/app/src/main/res/layout/activity_custom_intent.xml
@@ -12,4 +12,16 @@
         android:layout_height="wrap_content"
         android:text="To be set by string in custom Intent"/>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No id textview"/>
+
+    </RelativeLayout>
+
+
 </LinearLayout>
